--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,7 @@ updates:
   schedule:
     interval: daily
     time: "00:00"
-    timezone: "Asia/Yangon"
+    timezone: "Asia/Kolkata"
   labels:
     - "dependencies"
   open-pull-requests-limit: 50
